# nix-eval-jobs

./: CONTRIBUTING.md  default.nix  flake.nix  meson.build  shell.nix
.github/workflows/: ci.yml  propose-release.yml
dev/: treefmt.nix
src/: buffered-io.hh  constituents.cc  constituents.hh  drv.cc  drv.hh  eval-args.cc  eval-args.hh  meson.build  nix-eval-jobs.cc  output-stream-lock.hh  response.cc  response.hh  store.hh  strings-portable.hh  worker.cc  worker.hh
tests-functional/: test_eval.py
tests-functional/assets/: ci.nix  flake.nix
tests-unit/: json.cc  meson.build
tests-unit/data/constituents/: full.json
tests-unit/data/drv/: all-fields.json  cached.json  minimal.json  not-built.json
tests-unit/data/response/: attrs.json  error.json  job-with-extra-value.json  job.json
